Edited modals for manage user - personnel and patient

--- a/Admin/ManageUsers/ManagePatient2.html
+++ b/Admin/ManageUsers/ManagePatient2.html
@@ -104,62 +104,82 @@
 
             <!--Modal for uploading patient csv-->
             <!--To include uploading files limited to csv file only-->
-            <div id="myModal" class="modal">
-                <div class="modal-content">
-                    <h3> Upload File/s<span id="close" class="close">&times;</span></h3>
-                    <div id="uploadingFile">
+            <div id="uploadFileModal" class="modal">
+                <div class="content-modal">
+                    <div class="modal-header">
+                        <div id="uploadingFile">
+                            <h3> Upload File/s </h3>
+                        </div>
+                        <span id="close" class="close">&times;</span>
+                    </div>
+
+                    <div class="modal-body">
                         <p>Upload a list of patients (.csv) <br> or </p>
                         <input type="file" class="form-control" id="fileUpload" multiple/>
                         <button id="browse" type="button" class="'button4 btn-primary"> Browse </button>
-                    </div>
 
-                    <div id="listFile">
-                        <!--temporary uploading-->
-                        <h6> Uploaded Files </h6>
-                        <p> prereg_09-19-2021_validates.csv</p>
-                        <p> prereg_09-21-2021_validates.csv</p>
+                        <div id="listFile">
+                            <!--temporary uploading-->
+                            <h6> Uploaded Files </h6>
+                            <p> prereg_09-19-2021_validates.csv</p>
+                            <p> prereg_09-21-2021_validates.csv</p>
+                        </div>
                     </div>
-
                 </div>
-
-            </div>
+            </div>>
 
             <!--Button for Adding Patient Details-->
             <button id="addVaccine" type="button" class="buttonTop">Add User</button>
 
             <!--Modal for Adding patient -->
-            <div id="modal2" class="modal">
-                <div class="modal-content container">
-                    <!-- <span id="exit1" class="close">&times;</span> -->
-                    <h3>Add User | Patient<span id="close2" class="close">&times;</span></h3>
-                    <div class="addUser-PopUp">
+            <div id="patientModal" class="modal">
+                <div class="content-modal">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Add USER-Patient</h4>
+                        <button type="button" id="close2" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
                         <h4> Basic Information</h4>
-                        <input class="col-xs-12" type="input" name="lastName" placeholder="Last Name">
-                        <input class="col-xs-12" type="input" name="firstName" placeholder="First Name">
-                        <input class="col-xs-12" type="input" name="middleName" placeholder="Middle Name">
-                        <label for="suffix"> Suffix Name </label>
-                        <select class="formControl" id="suffix">
-                            <option> Sr </option>
-                            <option> Jr </option>
-                            <option> I </option>
-                            <option> II </option>
-                            <option> III </option>
+                        <label for="lname">Last Name</label>
+                        <input type="text3" id="lname" class='input' name="lastname" placeholder="Input Last Name"><br>
+
+                        <label for="fname">First Name</label><br>
+                        <input type="text3" id="fname" class='input' name="firstname" placeholder="Input First Name"><br>
+
+                        <label for="mname">Middle Name</label><br>
+                        <input type="text3" id="mname" class='input' name="middlename" placeholder="Input Middle Name">
+
+                        <label for="suffix">Suffix</label><br>
+                        <select id="suffix" name="suffix">
+                            <option value="">None</option>
+                            <option value="sr"> Sr </option>
+                            <option value="jr"> Jr </option>
+                            <option value="1"> I </option>
+                            <option value="2"> II </option>
+                            <option value="3"> III </option>
                         </select>
 
                         <label for="category"> Category </label>
                         <select class="formControl" id="category">
-                            <option> A1 </option>
-                            <option> A2 </option>
-                            <option> A3 </option>
-                            <option> A4 </option>
-                            <option> A5 </option>
+                            <option value="A1"> A1 </option>
+                            <option value="A2"> A2 </option>
+                            <option value="A3"> A3 </option>
+                            <option value="A4"> A4 </option>
+                            <option value="A5"> A5 </option>
                         </select>
 
                         <h4> Address </h4>
-                        <input class="col-xs-12" type="input" name="street" placeholder="Street Name">
-                        <input class="col-xs-12" type="input" name="city" placeholder="City/Town">
-                        <input class="col-xs-12" type="input" name="state" placeholder="State/Province">
-                        <input class="col-xs-12" type="input" name="zip" placeholder="Postal/Zip Code">
+                        <label for="street">Street Name</label>
+                        <input type="text3" id="street" class='input' name="street" placeholder="Input Street Name"><br>
+
+                        <label for="city">City/Town</label><br>
+                        <input type="text3" id="city" class='input' name="city" placeholder="Input City/Town"><br>
+
+                        <label for="state">State/Province</label><br>
+                        <input type="text3" id="state" class='input' name="state" placeholder="Input State/Province">
+
+                        <label for="postal">Postal/Zip Code</label><br>
+                        <input type="text3" id="postal" class='input' name="postal" placeholder="Input Postal/Zip Code">
 
                         <label for="date"> Birthdate </label>
                         <input type="date" id="date" name="date">
@@ -170,11 +190,12 @@
                             <option> Female </option>
                         </select>
 
-                        <input class="col-xs-12" type="input" name="contactNum" placeholder="Contact Number">
-                        <input class="col-xs-12" type="input" name="occupation" placeholder="Occupation">
-
+                        <input type="input" name="contactNum" placeholder="Contact Number">
+                        <input type="input" name="occupation" placeholder="Occupation">
                     </div>
+                    <div class="modal-footer">
                     <button id="next"> Next </button>
+                    </div>
                 </div>
             </div>
 
@@ -227,12 +248,12 @@
         </script>
 
         <script>
-            var modal = document.getElementById("myModal");
+            var modal = document.getElementById("uploadFileModal");
             var addNewVaccinebtn = document.getElementById("addNewVaccineBtn");
             var span = document.getElementById("close");
             var cancel = document.getElementById("cancel");
             var save = document.getElementById("save");
-            var modal2 = document.getElementById("modal2");
+            var modal2 = document.getElementById("patientModal");
             var addVaccine = document.getElementById("addVaccine");
             var span2 = document.getElementById("close2");
 
@@ -267,5 +288,5 @@
             }
         </script>
 </body>
-
 </html>
+
