--- a/Admin/ManageUsers/managePersonnel.html
+++ b/Admin/ManageUsers/managePersonnel.html
@@ -28,7 +28,7 @@
 <!--Search-->
 <div class="search-container">
     <form action="/action_page.php">
-        <input type="text" placeholder="Search" name="search">
+        <input type="text1" placeholder="Search" name="search">
         <button type="submit"><i class="fa fa-search"></i>
             <img id="searchButton" src="../../img/magnifying-glass.png">
         </button>
@@ -42,24 +42,28 @@
     Upload File
 </button>
 
-<!--Modal for adding personnel-->
+<!--Modal for uploading personnel-->
 <div id="uploadFileModal" class="modal">
     <div class="modal-content">
-        <span id = "close" class="close">&times;</span>
-        <div id="uploadingFile">
-            <h3> Upload File/s </h3>
+        <div class="modal-header">
+            <div id="uploadingFile">
+                <h3> Upload File/s </h3>
+            </div>
+            <span id="close" class="close">&times;</span>
+        </div>
+
+        <div class="modal-body">
             <p>Upload a list of patients (.csv) <br> or </p>
             <input type="file" class="form-control" id="fileUpload" multiple/>
             <button id="browse" type="button" class="'button4 btn-primary"> Browse </button>
-        </div>
 
-        <div id="listFile">
-            <!--temporary uploading-->
-            <h6> Uploaded Files </h6>
-            <p> prereg_09-19-2021_validates.csv</p>
-            <p> prereg_09-21-2021_validates.csv</p>
+            <div id="listFile">
+                <!--temporary uploading-->
+                <h6> Uploaded Files </h6>
+                <p> prereg_09-19-2021_validates.csv</p>
+                <p> prereg_09-21-2021_validates.csv</p>
+            </div>
         </div>
-
     </div>
 
 </div>
@@ -71,7 +75,7 @@
 
 <!--Modal for adding personnel-->
 <div id="personnelModal" class="modal">
-    <div class="modal-content">
+    <div class="modal-content" >
         <div class="modal-header">
             <h4 class="modal-title">Add USER-Personnel</h4>
             <button type="button" id="close1" class="close" data-dismiss="modal">&times;</button>
@@ -81,7 +85,8 @@
                 <h5> Basic Information</h5>
                 <div class="row">
                     <div class="col-sm">
-                        <label for="lname">Last Name</label>
+                        <form class ="container">
+                            <label for="lname">Last Name</label>
                         <input type="text" id="lname" class='input' name="lastname" placeholder="Input Last Name"><br>
 
                         <label for="fname">First Name</label><br>
@@ -94,40 +99,47 @@
                         <select id="suffix" name="suffix">
                             <option value="">None</option>
                             <option value="sr"> Sr </option>
-                            <option> Jr </option>
-                            <option> I </option>
-                            <option> II </option>
-                            <option> III </option>
+                            <option value="jr"> Jr </option>
+                            <option value="1"> I </option>
+                            <option value="2"> II </option>
+                            <option value="3"> III </option>
                         </select>
+                        </form>
 
                     </div>
                     <div class="col-sm">
                         <label for="role">Role</label><br>
                         <select id="role" name="suffix">
                             <option value="" disabled selected hidden>Select a Role...</option>
-                            <option> City Hall Employee </option>
-                            <option> Vaccination Personnel </option>
+                            <option value="city hall employee"> City Hall Employee </option>
+                            <option value="vaccination personnel"> Vaccination Personnel </option>
                         </select>
                         <label for="contactNumber"> Contact Number </label>
                         <input type="text" class="formControl" id="contactNumber" name="contactNumber" placeholder="+639">
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" id="cancel" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="button" id="next" class="btn btn-primary" data-dismiss="modal">Next</button>
+                    <button type="button" id="cancel">Cancel</button>
+                    <button type="button" id="next">Next</button>
                 </div>
             </div>
         </div>
     </div>
 
     <!--Modal for personnel credentials-->
-    <div id="addButtonModal" class="modal">
+    <div id="credentials" class="modal">
         <div class="modal-content">
-            <span id = "close2" class="close">&times;</span>
-            <h5> Here are the patients credentials. </h5>
-            <input class="col-xs-12" type="input" name="username" placeholder="Username" disabled>
-            <input class="col-xs-12" type="input" name="password" placeholder="Password" disabled>
-            <button id = 'save'> Save </button>
+            <div class="modal-header">
+                <span id = "close2" class="close">&times;</span>
+            </div>
+            <div class="modal-body">
+                <h5> Here are the patients credentials. </h5>
+                <input class="col-xs-12" type="input" name="username" placeholder="Username" disabled>
+                <input class="col-xs-12" type="input" name="password" placeholder="Password" disabled>
+            </div>
+            <div class="modal-footer">
+            <button type="button" id ='save'> Save </button>
+            </div>
         </div>
 
     </div>
@@ -148,7 +160,7 @@
     <script>
         //modals
         var modal = document.getElementById("personnelModal");
-        var addModal = document.getElementById("addButtonModal");
+        var addModal = document.getElementById("credentials");
         var notifyModal = document.getElementById("notifyModal");
         var uploadFileModal = document.getElementById("uploadFileModal")
 
@@ -179,8 +191,8 @@
 
         // add button after input of personnel basic info
         next.onclick = function (){
-            modal.style.display = "none";
-            addModal.style.display = "block";
+           modal.style.display = "none";
+           addModal.style.display = "block"
         }
 
         save.onclick = function (){
