--- a/Admin/ManageUsers/managePersonnel2.html
+++ b/Admin/ManageUsers/managePersonnel2.html
@@ -22,6 +22,8 @@
     <script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
+
+
     <!-- Font Awesome JS -->
     <script src="https://kit.fontawesome.com/fcdb0fe9f3.js" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
@@ -103,26 +105,29 @@
                     Upload File
                 </button>
 
-            <!--Modal for adding personnel-->
+            <!--Modal for uploading personnel-->
             <div id="uploadFileModal" class="modal">
-                <div class="modal-content">
-                    <span id="close" class="close">&times;</span>
-                    <div id="uploadingFile">
-                        <h3> Upload File/s </h3>
+                <div class="content-modal">
+                    <div class="modal-header">
+                        <div id="uploadingFile">
+                            <h3> Upload File/s </h3>
+                        </div>
+                        <span id="close" class="close">&times;</span>
+                    </div>
+
+                    <div class="modal-body">
                         <p>Upload a list of patients (.csv) <br> or </p>
                         <input type="file" class="form-control" id="fileUpload" multiple/>
                         <button id="browse" type="button" class="'button4 btn-primary"> Browse </button>
-                    </div>
 
-                    <div id="listFile">
-                        <!--temporary uploading-->
-                        <h6> Uploaded Files </h6>
-                        <p> prereg_09-19-2021_validates.csv</p>
-                        <p> prereg_09-21-2021_validates.csv</p>
+                        <div id="listFile">
+                            <!--temporary uploading-->
+                            <h6> Uploaded Files </h6>
+                            <p> prereg_09-19-2021_validates.csv</p>
+                            <p> prereg_09-21-2021_validates.csv</p>
+                        </div>
                     </div>
-
                 </div>
-
             </div>
 
             <!--Button for Adding Personnel Details-->
@@ -132,82 +137,88 @@
 
             <!--Modal for adding personnel-->
             <div id="personnelModal" class="modal">
-                <div class="modal-content">
+                <div class="content-modal">
                     <div class="modal-header">
                         <h4 class="modal-title">Add USER-Personnel</h4>
                         <button type="button" id="close1" class="close" data-dismiss="modal">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <div class="AddNewVaccine-PopUp">
+                        <div class="AddNewPersonnel-PopUp">
                             <h5> Basic Information</h5>
                             <div class="row">
                                 <div class="col-sm">
                                     <label for="lname">Last Name</label>
-                                    <input type="text" id="lname" class='input' name="lastname" placeholder="Input Last Name"><br>
+                                    <input type="text3" id="lname" class='input' name="lastname" placeholder="Input Last Name"><br>
 
                                     <label for="fname">First Name</label><br>
-                                    <input type="text" id="fname" class='input' name="firstname" placeholder="Input First Name"><br>
+                                    <input type="text3" id="fname" class='input' name="firstname" placeholder="Input First Name"><br>
 
                                     <label for="mname">Middle Name</label><br>
-                                    <input type="text" id="mname" class='input' name="middlename" placeholder="Input Middle Name">
+                                    <input type="text3" id="mname" class='input' name="middlename" placeholder="Input Middle Name">
 
                                     <label for="suffix">Suffix</label><br>
                                     <select id="suffix" name="suffix">
-                            <option value="">None</option>
-                            <option value="sr"> Sr </option>
-                            <option> Jr </option>
-                            <option> I </option>
-                            <option> II </option>
-                            <option> III </option>
-                        </select>
-
+                                        <option value="">None</option>
+                                        <option value="sr"> Sr </option>
+                                        <option value="jr"> Jr </option>
+                                        <option value="1"> I </option>
+                                        <option value="2"> II </option>
+                                        <option value="3"> III </option>
+                                    </select>
                                 </div>
+
                                 <div class="col-sm">
                                     <label for="role">Role</label><br>
                                     <select id="role" name="suffix">
-                            <option value="" disabled selected hidden>Select a Role...</option>
-                            <option> City Hall Employee </option>
-                            <option> Vaccination Personnel </option>
-                        </select>
+                                        <option value="" disabled selected hidden>Select a Role...</option>
+                                        <option value="city hall employee"> City Hall Employee </option>
+                                        <option value="vaccination personnel"> Vaccination Personnel </option>
+                                    </select>
                                     <label for="contactNumber"> Contact Number </label>
-                                    <input type="text" class="formControl" id="contactNumber" name="contactNumber" placeholder="+639">
+                                    <input type="text3" class="formControl" id="contactNumber" name="contactNumber" placeholder="+639XXXXXXXX">
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" id="cancel" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                <button type="button" id="next" class="btn btn-primary" data-dismiss="modal">Next</button>
+                                <button type="button" id="cancel" data-dismiss="modal">Cancel</button>
+                                <button type="button" id="next">Next</button>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <!--Modal for personnel credentials-->
-                <div id="addButtonModal" class="modal">
-                    <div class="modal-content">
-                        <span id="close2" class="close">&times;</span>
-                        <h5> Here are the patients credentials. </h5>
-                        <input class="col-xs-12" type="input" name="username" placeholder="Username" disabled>
-                        <input class="col-xs-12" type="input" name="password" placeholder="Password" disabled>
-                        <button id='save'> Save </button>
+            <!--Modal for Personnel Credentials-->
+            <div id="personnelCredentials" class="modal">
+               <div class="content-modal">
+                   <div class="modal-header">
+                       <span id = "close2" class="close">&times;</span>
+                   </div>
+                   <div class="modal-body">
+                       <h5> Here are the patients credentials. </h5>
+                       <label1 for="username">Username</label1>
+                       <input type="text" id="username" name="username"  disabled="disabled"><br>
+                       <label1 for="password">Password</label1>
+                       <input type="text" id="password" name="password"  disabled="disabled">
+                   </div>
+                   <div class="modal-footer">
+                       <button type="button" id ='save'> Save </button>
+                   </div>
+               </div>
+            </div>
+
+            <div id="notifyModal" class="modal">
+                <div class="content-modal">
+                    <div class="modal-header">
+                        <span id = "close3" class="close">&times;</span>
                     </div>
-
-                </div>
-
-                <!--Modal for successful notification-->
-                <div id="notifyModal" class="modal">
-                    <div class="modal-content">
-                        <span id="close3" class="close">&times;</span>
-                        <br>
-                        <img src="../../img/checkmark.png">
-                        <p>
-                            <center> User Personnel successfully added. </center>
-                        </p>
-                        <button id='exit'> Close </button>
+                    <div class="modal-body">
+                        <img src="../../img/checkmark.png" alt="confirm" id="confirm">
+                        <p> <center> User Personnel successfully added. </center> </p>
                     </div>
-                    <!--instead of close change to Done-->
-
+                    <div class="modal-footer">
+                        <button id = 'exit'> Close </button> <!--instead of close change to Done-->
+                    </div>
                 </div>
-
             </div>
 
             <!--Search-->
@@ -244,10 +255,25 @@
     </div>
     </div>
 
+    <!-- jQuery CDN - Slim version (=without AJAX) -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- Popper.JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#sidebarCollapse').on('click', function() {
+                $('#sidebar').toggleClass('active');
+            });
+        });
+    </script>
+
     <script>
         //modals
         var modal = document.getElementById("personnelModal");
-        var addModal = document.getElementById("addButtonModal");
+        var addModal = document.getElementById("personnelCredentials");
         var notifyModal = document.getElementById("notifyModal");
         var uploadFileModal = document.getElementById("uploadFileModal")
 
@@ -268,59 +294,59 @@
 
 
         //upload file button
-        uploadFileBtn.onclick = function() {
-                uploadFileModal.style.display = "block";
-            }
-            // add button for Add User
-        addUserBtn.onclick = function() {
+        uploadFileBtn.onclick = function (){
+            uploadFileModal.style.display = "block";
+        }
+        // add button for Add User
+        addUserBtn.onclick = function (){
             modal.style.display = "block";
         }
 
         // add button after input of personnel basic info
-        next.onclick = function() {
+        next.onclick = function (){
             modal.style.display = "none";
-            addModal.style.display = "block";
+            addModal.style.display = "block"
         }
 
-        save.onclick = function() {
+        save.onclick = function (){
             modal.style.display = "none";
             addModal.style.display = "none";
-            notifyModal.style.display = "block";
+            notifyModal.style.display="block";
         }
 
-        span.onclick = function() {
+        span.onclick = function () {
             uploadFileModal.style.display = "none";
         }
 
-        span1.onclick = function() {
+        span1.onclick = function () {
             modal.style.display = "none";
         }
 
-        span2.onclick = function() {
+        span2.onclick = function (){
             modal.style.display = "none";
-            addModal.style.display = "none";
+            addModal.style.display ="none";
         }
 
-        span3.onclick = function() {
+        span3.onclick = function (){
             modal.style.display = "none";
-            addModal.style.display = "none";
+            addModal.style.display ="none";
             notifyModal.style.display = "none";
         }
 
-        exit.onclick = function() {
+        exit.onclick = function (){
             modal.style.display = "none";
-            addModal.style.display = "none";
+            addModal.style.display ="none";
             notifyModal.style.display = "none";
         }
 
-        cancel.onclick = function() {
+        cancel.onclick = function (){
             modal.style.display = "none";
             addModal.style.display = "none";
-            notifyModal.style.display = "none"
+            notifyModal.style.display="none"
         }
 
-        window.onclick = function(event) {
-            if (event.target == modal || event.target == addModal || event.target == notifyModal || event.target == uploadFileModal) {
+        window.onclick = function (event){
+            if(event.target == modal || event.target == addModal || event.target == notifyModal || event.target == uploadFileModal){
                 modal.style.display = "none";
                 addModal.style.display = "none";
                 uploadFileModal.style.display = "none";
@@ -329,5 +355,4 @@
         }
     </script>
 </body>
-
 </html>
