Edited modals for manage user -patient

--- a/Admin/ManageUsers/ManagePatient2.html
+++ b/Admin/ManageUsers/ManagePatient2.html
@@ -190,8 +190,11 @@
                             <option> Female </option>
                         </select>
 
-                        <input type="input" name="contactNum" placeholder="Contact Number">
-                        <input type="input" name="occupation" placeholder="Occupation">
+                        <label for="number">Contact Number</label><br>
+                        <input type="text3" id="number" class='input' name="postal" placeholder="+639XXXXXXXXXX">
+
+                        <label for="occupation">Occupation</label><br>
+                        <input type="text3" id="occupation" class='input' name="postal" placeholder="Input Occupation">
                     </div>
                     <div class="modal-footer">
                     <button id="next"> Next </button>
