--- a/Patient Module/helpPatient.html
+++ b/Patient Module/helpPatient.html
@@ -74,7 +74,15 @@
                         <div class="card-body helpCard">
                             <h5 class="card-title"><i class="fas fa-question"></i> Ask a question</h5>
                             <p class="card-text">Contact one of our representatives to cater your problem.</p>
-                            <a href="#" class="btn btn-primary">Ask now</a>
+                            <a href="#collapseAskNow" data-toggle="collapse" class="btn btn-primary" role="button" aria-expanded="false" aria-controls="collapseAskNow">Ask now</a>
+                            <div class="collapse" id="collapseAskNow">
+
+                                <p><b>Reminder:</b> We DO NOT have any support channels on Messenger, Facebook, or other social media websites.Please be wary of websites or messaging platforms that claim to be an official Baguio SMIT+.</p>
+                                <p>For any GCash-related concern, you can reach SMIT+ Personnel through any of the following support channels:<br>
+                                    <br>
+                                    <i>Email: baguioSmitSupport@gmail.com<br>
+                                   Mobile Number: +639212876543</i> </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -83,7 +91,13 @@
                         <div class="card-body helpCard">
                             <h5 class="card-title"><i class="fas fa-unlock-alt"></i> Forgot Credentials</h5>
                             <p class="card-text">Know how to reset your password.</p>
-                            <a href="#" class="btn btn-primary">Reset Password</a>
+                            <a href="#collapseResetPass" data-toggle="collapse" class="btn btn-primary" role="button" aria-expanded="false" aria-controls="collapseResetPass">Reset Password</a>
+                            <div class="collapse" id="collapseResetPass">
+
+                                <p>To reset your password if you're not logged in to SMIT+: <br> 1. Go to the LOGIN page.<br> 2. Click <i>Forgot Password</i> below the Login button.<br> 3. Enter your username <i>associated to your account</i> and click next.<br>                                    4. A OTP (One-Time Password) will be sent to your Mobile Number associated to your account. <i>This is to confirm your identity.</i><br> 5. When verifieid, you will be directed to a page where you can set a new password
+                                    for your account.<br>
+                                    <br>If you're still having trouble, we can help you recover your account by contacting us.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -92,7 +106,10 @@
                         <div class="card-body helpCard">
                             <h5 class="card-title"><i class="fas fa-id-card"></i> Contact LGU</h5>
                             <p class="card-text">Get in touch with your Local Government</p>
-                            <a href="#" class="btn btn-primary">Contact</a>
+                            <a href="#collapseContact" data-toggle="collapse" class="btn btn-primary" role="button" aria-expanded="false" aria-controls="collapseContact">Contact</a>
+                            <div class="collapse" id="collapseContact">
+                                <iframe src="http://122.55.59.4/contact" height="700px" width="500px"></iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -100,8 +117,15 @@
                     <div class="card">
                         <div class="card-body helpCard">
                             <h5 class="card-title"><i class="fas fa-eye"></i> View Vaccination Schedule</h5>
-                            <p class="card-text">Get in touch with your Local Government</p>
-                            <a href="#" class="btn btn-primary">View</a>
+                            <p class="card-text">Know when will be your next dose vaccination</p>
+                            <a href="#collapseSched" data-toggle="collapse" class="btn btn-primary" role="button" aria-expanded="false" aria-controls="collapseSched">View</a>
+                            <div class="collapse" id="collapseSched">
+                                <br>
+                                <h5>
+                                    Your next dose for vaccination will be on:
+                                </h5>
+                                <input type="date" value="2021-08-22" readonly>
+                            </div>
                         </div>
                     </div>
                 </div>
