--- a/Patient Module/settingsPatient.html
+++ b/Patient Module/settingsPatient.html
@@ -34,23 +34,23 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="homePatient.html"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-user-circle"></i> Profile</a>
+                    <a class="nav-link" href="profilePatient.html"><i class="fas fa-user-circle"></i> Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-file"></i> Report</a>
+                    <a class="nav-link" href="reportPatient.html"><i class="fas fa-file"></i> Report</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="settingsPatient.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-cog"></i> Settings
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#"><i class="fas fa-file-image"></i> Infographics</a>
+                        <a class="dropdown-item" href="infographicsPatient.html"><i class="fas fa-file-image"></i> Infographics</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#"><i class="fas fa-question-circle"></i> Help</a>
-                        <a class="dropdown-item" href="#"><i class="fas fa-info-circle"></i> About</a>
+                        <a class="dropdown-item" href="helpPatient.html"><i class="fas fa-question-circle"></i> Help</a>
+                        <a class="dropdown-item" href="aboutPatient.html"><i class="fas fa-info-circle"></i> About</a>
                     </div>
                 </li>
             </ul>
