--- a/Patient Module/settingsPatient.html
+++ b/Patient Module/settingsPatient.html
@@ -58,7 +58,7 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-light" type="submit">Search</button>
             </form>
-            <button class="signoutBtn" type="submit"><i class="fas fa-sign-out-alt"></i></button>
+            <button href="loginPatient.html" class="signoutBtn" type="button"><i class="fas fa-sign-out-alt"></i></button>
         </div>
     </nav>
 
@@ -71,7 +71,6 @@
         <div class="reportWrapper">
             <div class="cardd settingsCard">
                 <div class="card-body settingBody">
-                    <!-- <h5 class="card-title">Change Password</h5> -->
                     <a href="#collapseChangePass" class="btn btnPass btn-outline-dark" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseChangePass">Change Password</a>
                     <a href="#collapseChangeNum" class="btn btnPass btn-outline-dark" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseChangeNum">Edit Mobile Number</a> <br>
                     <a href="#collapseChangeProf" class="btn btnPass btn-outline-dark" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseChangeProf">Edit Profile</a> <br>
