favicon added to patient module

--- a/Patient Module/registration.html
+++ b/Patient Module/registration.html
@@ -26,6 +26,8 @@
     <!-- Log In -->
     <div class="loginow">
         <h3 class="logInToText pt-5">Registration</h3>
+        <!--Favicon-->
+        <link rel="icon" href="../img/FaviSMIT+.png" type="image/jpg">
         <form id="login-form" class="form" action="EmployeeLoginAuthentication.php" method="post">
             <img src="../img/SMIT+.png" class="logo" alt="">
             <div class="form-group">
