--- a/Patient Module/resetPW.html
+++ b/Patient Module/resetPW.html
@@ -3,6 +3,8 @@
 
 <meta charset="UTF-8">
 <title> Reset Password</title>
+<!--Favicon-->
+<link rel="icon" href="../img/FaviSMIT+.png" type="image/jpg">
 <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
 
 <!--CSS-->
