--- a/Patient Module/infographicsPatient.html
+++ b/Patient Module/infographicsPatient.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>SMIT+ | Infographics</title>
+    <!--Favicon-->
+    <link rel="icon" href="../img/FaviSMIT+.png" type="image/jpg">
     <!--Custom CSS-->
     <link rel="stylesheet" href="../css/patientStyle.css">
     <!--Bootstrap-->
