--- a/Patient Module/loginPatient.html
+++ b/Patient Module/loginPatient.html
@@ -10,6 +10,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>Baguio SMIT+ | Login</title>
+    <!--Favicon-->
+    <link rel="icon" href="../img/FaviSMIT+.png" type="image/jpg">
     <!--CSS-->
     <link rel="stylesheet" href="../css/patientLoginStyle.css">
     <!--Bootstrap-->
