--- a/Patient Module/settingsPatient.html
+++ b/Patient Module/settingsPatient.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>SMIT+ | Settings</title>
-    <title>NavTemplate</title>
+    <!--Favicon-->
+    <link rel="icon" href="../img/FaviSMIT+.png" type="image/jpg">
     <!--Custom CSS-->
     <link rel="stylesheet" href="../css/patientStyle.css">
     <!--Bootstrap-->
