--- a/Admin/login.html
+++ b/Admin/login.html
@@ -13,7 +13,8 @@ Description: Login HTML Elements for receiving credentials from the users
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>Baguio SMIT+ | Login</title>
-
+    <!--Favicon-->
+    <link rel="icon" href="../img/FaviSMIT+.png" type="image/jpg">
     <!--Bootstrap-->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
@@ -72,4 +73,5 @@ Description: Login HTML Elements for receiving credentials from the users
         </div>
     </footer>
 </body>
+
 </html>
