--- a/Patient Module/infographicsPatient.html
+++ b/Patient Module/infographicsPatient.html
@@ -9,15 +9,17 @@
     <title>SMIT+ | Infographics</title>
     <!--Favicon-->
     <link rel="icon" href="../img/FaviSMIT+.png" type="image/jpg">
+
     <!--Custom CSS-->
     <link rel="stylesheet" href="../css/patientStyle.css">
+
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!--Javascript-->
+    <script src="../javascript/modalPatient.js" defer></script>
 
     <!-- Font Awesome JS -->
     <script src="https://kit.fontawesome.com/fcdb0fe9f3.js" crossorigin="anonymous"></script>
@@ -70,25 +72,6 @@
             <hr>
         </div>
         <div class="reportWrapper infoWrapper">
-            <!-- <div class="card infographics">
-                <img src="../img/2019-nCoV.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <p class="card-text">DOH Case of Pneumonia.</p>
-                </div>
-            </div>
-            <div class="card infographics">
-                <img src="../img/2019-nCoVHealthAdvisory.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <p class="card-text">Health Advisory</p>
-                </div>
-            </div>
-            <div class="card infographics">
-                <img src="../img/orig_facemask.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <p class="card-text">How to wear a facemask</p>
-                </div>
-            </div> -->
-
             <img id="infoImg" onclick="viewImage(id)" src="../img/2019-nCoV.jpg" alt="Case of Pneumonia">
             <img id="infoImg2" onclick=viewImage(id) src="../img/2019-nCoVHealthAdvisory.jpg" alt="Health Advisory on COVID">
             <img id="infoImg3" onclick=viewImage(id) src="../img/orig_facemask.jpg" alt="Face Mask Inforgaphics">
@@ -104,35 +87,7 @@
 </body>
 
 </html>
-<script>
-    var modal = document.getElementById("imgModal");
-    var img = document.getElementById("infoImg");
-    var modalImg = document.getElementById("img01");
-    var captionText = document.getElementById("caption");
 
-    function viewImage(id) {
-        var src = $('#' + id).attr('src');
-        var capt = $('#' + id).attr('alt')
-        modal.style.display = "block";
-        modalImg.src = src;
-        captionText.innerHTML = capt;
-    }
-
-    var span = document.getElementsByClassName("close")[0];
-
-    span.onclick = function() {
-        modal.style.display = "none";
-    }
-
-    window.onclick = function(event) {
-        if (event.target == modal || event.target == addModal || event.target == notifyModal || event.target == uploadFileModal) {
-            modal.style.display = "none";
-            addModal.style.display = "none";
-            uploadFileModal.style.display = "none";
-            notifyModal.style.display = "none";
-        }
-    }
-</script>
 <style>
     #infoImg,
     #infoImg2,
